--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    android:padding="5dp"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center"
+        android:paddingTop="10dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageButton
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:background="@color/white"
+            android:src="@drawable/arrow_back" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/our_menu"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+
+        <include
+            android:id="@+id/cart"
+            layout="@layout/badges" />
+
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <GridLayout
+            android:id="@+id/gridFood"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="2"
+            android:padding="5dp">
+
+            <include
+                layout="@layout/food_card"
+                android:layout_width="0dp"
+                android:layout_height="250dp"
+                android:layout_columnWeight="1"
+                android:layout_margin="5dp" />
+
+            <include
+                layout="@layout/food_card"
+                android:layout_width="0dp"
+                android:layout_height="250dp"
+                android:layout_columnWeight="1"
+                android:layout_margin="5dp" />
+
+            <include
+                layout="@layout/food_card"
+                android:layout_width="0dp"
+                android:layout_height="250dp"
+                android:layout_columnWeight="1"
+                android:layout_margin="5dp" />
+
+            <include
+                layout="@layout/food_card"
+                android:layout_width="0dp"
+                android:layout_height="250dp"
+                android:layout_columnWeight="1"
+                android:layout_margin="5dp" />
+
+            <include
+                layout="@layout/food_card"
+                android:layout_width="0dp"
+                android:layout_height="250dp"
+                android:layout_columnWeight="1"
+                android:layout_margin="5dp" />
+
+            <include
+                layout="@layout/food_card"
+                android:layout_width="0dp"
+                android:layout_height="250dp"
+                android:layout_columnWeight="1"
+                android:layout_margin="5dp" />
+
+            <include
+                layout="@layout/food_card"
+                android:layout_width="0dp"
+                android:layout_height="250dp"
+                android:layout_columnWeight="1"
+                android:layout_margin="5dp" />
+
+            <include
+                layout="@layout/food_card"
+                android:layout_width="0dp"
+                android:layout_height="250dp"
+                android:layout_columnWeight="1"
+                android:layout_margin="5dp" />
+
+
+        </GridLayout>
+
+    </ScrollView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        app:menu="@menu/food_menu" />
+
+</LinearLayout>
